adds calendar logic and comments

--- a/index.html
+++ b/index.html
@@ -19,6 +19,36 @@
                 <h3>1</h3>
             </div> -->
         </div>
+        <h2>Add Meeting</h2>
+        <div id="addMeeting">
+            <div>
+                <h4>Meeting Day</h4>
+                <span id="newMeetingDay"><span>Click on a Day</span></span>
+            </div>
+            <div>
+                <h4>Meeting Time</h4>
+                <input id="newMeetingTime" type="time">
+            </div>
+            <div>
+                <h4>Meeting Name</h4>
+                <input id="newMeetingName" type="text" placeholder="Insert the meeting description">
+            </div>
+            <div class="last">
+                <h4>Add Meeting</h4>
+                <input id="createMeeting" type="button" value="Save Meeting" onclick="saveMeeting()">
+            </div>
+        </div>
+        <div id="appointments">
+            <h2>Appointments for the day:</h2>
+            <ul id="appointmentsList">
+                <!-- These are going to be dynamically generated
+                <li>item-1</li>
+                <li>item-2</li>
+                <li>item-3</li>
+                <li>item-4</li>
+                <li>item-5</li> -->
+            </ul>
+        </div>
     </div>
 
     <script src="./index.js"></script>
